2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/crypto.h: Don't discard const attribute.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/bootp.c (grub_cmd_dhcpopt): Use snprintf where it
	was intended.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/crypto.c: Don't discard const attribute.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/disk.c: Fix potential overflow.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c: Don't discard const attribute.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c: Don't discard const attribute.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/disk.c: Fix potential overflow.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common: Don't include non-existing directory
	grub-core/lib/libgcrypt-grub/include.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Clarify several translatable messages.

2013-12-21  David Prévot  <david@tilapin.org>

	Correct some translatable strings.

2013-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.c: Rephrase mkrescue description.

2013-12-21  Vladimir Serbinenko  <phcoder@gmail.com>
2013-12-21  Colin Watson  <cjwatson@ubuntu.com>

	Clarify several translatable messages.

2013-12-20  Colin Watson  <cjwatson@ubuntu.com>

	Be more verbose about some configure failures.

2013-12-20  Colin Watson  <cjwatson@ubuntu.com>

	Fix various build problems on GNU/Hurd.

	* grub-core/osdep/unix/getroot.c (strip_extra_slashes): Move inside
	!defined (__GNU__).
	(xgetcwd): Likewise.
	* include/grub/emu/hostdisk.h (grub_util_hurd_get_disk_info)
	[__GNU__]: Add prototype.
	* util/getroot.c (grub_util_biosdisk_get_grub_dev) [__GNU__]: Format
	long int using %ld rather than %d.

2013-12-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.c: Inform user about install platform.
